--- a/pondSkater2/android/res/values/games-ids.xml
+++ b/pondSkater2/android/res/values/games-ids.xml
@@ -4,18 +4,18 @@ Google Play game services IDs.
 Save this file as res/values/games-ids.xml in your project.
 -->
 <resources>
-    <string name="app_id">606356392795</string>
+    <string name="app_id">421870168922</string>
     <string name="package_name">com.simplebojocs.pondskater2</string>
-    <string name="achievement_first_game">CgkI25ah7dIREAIQAQ</string>
-    <string name="achievement_100_points">CgkI25ah7dIREAIQAg</string>
-    <string name="achievement_1000_points">CgkI25ah7dIREAIQAw</string>
-    <string name="achievement_5000_points">CgkI25ah7dIREAIQBA</string>
-    <string name="achievement_10000_points">CgkI25ah7dIREAIQBQ</string>
-    <string name="achievement_20000_points">CgkI25ah7dIREAIQBg</string>
-    <string name="achievement_10_games_over_1000">CgkI25ah7dIREAIQBw</string>
-    <string name="achievement_10_games_over_10000">CgkI25ah7dIREAIQCA</string>
-    <string name="achievement_5_games_over_20000">CgkI25ah7dIREAIQCQ</string>
-    <string name="achievement_first_moskito">CgkI25ah7dIREAIQCg</string>
-    <string name="achievement_10_moskitos_in_a_game">CgkI25ah7dIREAIQCw</string>
-    <string name="leaderboard_pond_skater_records">CgkI25ah7dIREAIQDg</string>
+    <string name="achievement_first_game">CgkI2tavy6MMEAIQAQ</string>
+    <string name="achievement_100_points">CgkI2tavy6MMEAIQAg</string>
+    <string name="achievement_1000_points">CgkI2tavy6MMEAIQAw</string>
+    <string name="achievement_5000_points">CgkI2tavy6MMEAIQBA</string>
+    <string name="achievement_10000_points">CgkI2tavy6MMEAIQBQ</string>
+    <string name="achievement_20000_points">CgkI2tavy6MMEAIQBg</string>
+    <string name="achievement_10_games_over_1000">CgkI2tavy6MMEAIQBw</string>
+    <string name="achievement_10_games_over_10000">CgkI2tavy6MMEAIQCA</string>
+    <string name="achievement_5_games_over_20000">CgkI2tavy6MMEAIQCQ</string>
+    <string name="achievement_first_moskito">CgkI2tavy6MMEAIQCg</string>
+    <string name="achievement_10_moskitos_in_a_game">CgkI2tavy6MMEAIQCw</string>
+    <string name="leaderboard_pond_skater_scores">CgkI2tavy6MMEAIQDA</string>
 </resources>
